# airco-remote-rs

./: Cargo.toml
src/: main.rs
