[package]
name = "airco-remote-rs"
version = "0.1.0"
authors = ["Mart Bent <martbent99@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1.0.70"
esp-idf-hal = "0.40.1"
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }


[build-dependencies]
embuild = "0.31.1"
